--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,7 +2,12 @@
 parameters:
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
-    templates.includeAnalyticsJs: false
+    templates.include_analytics_js: false
     templates.phone_number_uk: 020 3397 8376
     templates.phone_number_international: +4420 3397 8376
     templates.blog_url: https://citypantry.com/blog
+    templates.twitter_handle: citypantry
+
+    // A key that works for any domain is: AIzaSyDcbvisbl9Wx6CA4qKe7Ld-mVWVKOiRZ_U
+    // A key that works for prod is: AIzaSyD1LSq6a2KDw3-pVN20CdqUpNEZ37wADDg
+    templates.google_maps_javascript_api_v3_key: AIzaSyD1LSq6a2KDw3-pVN20CdqUpNEZ37wADDg
