--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0.12",
         "sensio/framework-extra-bundle": "~3.0",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "citypantry/api-client": "0.1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
