--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-imagemin": "~0.7.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-copy": "~0.7.0",
-    "matchdep": "~0.1.2"
+    "matchdep": "~0.1.2",
+    "grunt-contrib-concat": "~0.5.0"
   }
 }
