--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-copy": "~0.7.0",
     "matchdep": "~0.1.2",
-    "grunt-contrib-concat": "~0.5.0"
+    "grunt-contrib-concat": "~0.5.0",
+    "protractor": "~1.0.0",
+    "chromedriver": "~2.9.1-1",
+    "selenium-webdriver": "~2.x",
+    "jasmine-reporters": "~0.4.0"
   }
 }
