--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chromedriver": "~2.9.1-1",
     "selenium-webdriver": "~2.x",
     "jasmine-reporters": "~0.4.0",
-    "jshint": "~2.6.0"
+    "jshint": "~2.6.0",
+    "grunt-6to5": "~3.0.0"
   }
 }
