--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,3 +37,4 @@ twig:
         blogUrl: %templates.blog_url%
         twitterHandle: %templates.twitter_handle%
         googleMapsJavascriptApiV3Key: %templates.google_maps_javascript_api_v3_key%
+        hubspotBase: %templates.hubspot_base%
