--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "citypantry-3-frontend",
   "title": "CityPantry",
+  "scripts": {
+    "postinstall": "npm run webdriverupdate && grunt copy:dist sass csso js",
+    "test": "vagrant up && ./bin/wait-for-dev && ./bin/load-db-fixtures && ./node_modules/protractor/bin/protractor etc/protractor.js; vagrant halt;",
+    "test-no-halt": "vagrant up && ./bin/wait-for-dev && ./bin/load-db-fixtures && ./node_modules/protractor/bin/protractor etc/protractor.js;",
+    "update-webdriver": "node_modules/protractor/bin/webdriver-manager update"
+  },
   "url": "https://citypantry.com/",
   "copyright": "2015",
   "version": "3.0.0",
   "dependencies": {},
   "devDependencies": {
+    "chromedriver": "~2.9.1-1",
     "grunt": "~0.4.1",
-    "grunt-sass": "~0.16.1",
-    "grunt-csso": "git://github.com/amyboyd/grunt-csso.git",
+    "grunt-6to5": "~3.0.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-copy": "~0.7.0",
     "grunt-contrib-imagemin": "~0.7.1",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-copy": "~0.7.0",
-    "matchdep": "~0.1.2",
-    "grunt-contrib-concat": "~0.5.0",
-    "protractor": "~1.0.0",
-    "chromedriver": "~2.9.1-1",
-    "selenium-webdriver": "~2.x",
+    "grunt-csso": "git://github.com/amyboyd/grunt-csso.git",
+    "grunt-sass": "~0.16.1",
     "jasmine-reporters": "~0.4.0",
     "jshint": "~2.6.0",
-    "grunt-6to5": "~3.0.0"
+    "matchdep": "~0.1.2",
+    "protractor": "~1.0.0",
+    "reattempt-promise-function": "0.0.6",
+    "request-promise": "^0.4.0",
+    "selenium-webdriver": "~2.x"
   }
 }
