Made navigation menu more mobile friendly

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "title": "CityPantry",
   "scripts": {
     "postinstall": "npm run webdriverupdate && grunt copy:dist sass csso js",
-    "test": "vagrant up && ./bin/wait-for-dev && ./bin/load-db-fixtures && ./node_modules/protractor/bin/protractor etc/protractor.js; vagrant halt;",
-    "test-no-halt": "vagrant up && ./bin/wait-for-dev && ./bin/load-db-fixtures && ./node_modules/protractor/bin/protractor etc/protractor.js;",
+    "test": "npm run postinstall && vagrant up && ./bin/wait-for-dev && ./bin/load-db-fixtures && ./node_modules/protractor/bin/protractor etc/protractor.js; vagrant halt;",
+    "test-no-halt": "npm run postinstall && vagrant up && ./bin/wait-for-dev && ./bin/load-db-fixtures && ./node_modules/protractor/bin/protractor etc/protractor.js;",
     "test-local": "/home/citypantry/project/api/app/console doctrine:mongodb:fixtures:load && LOCAL_SELENIUM=1 ./node_modules/protractor/bin/protractor etc/protractor.js;",
     "update-webdriver": "node_modules/protractor/bin/webdriver-manager update",
     "link-chromedriver": "ln -s /home/citypantry/project/frontend/node_modules/chromedriver/bin/chromedriver node_modules/protractor/selenium/chromedriver.exe"
