--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "npm run postinstall && vagrant up && ./bin/wait-for-dev && && ./node_modules/protractor/bin/protractor etc/protractor.js; vagrant halt;",
     "test-no-halt": "npm run postinstall && vagrant up && ./bin/wait-for-dev && && ./node_modules/protractor/bin/protractor etc/protractor.js;",
     "test-local": "LOCAL_SELENIUM=1 ./node_modules/protractor/bin/protractor etc/protractor.js;",
+    "unit-tests": "./node_modules/karma/bin/karma start etc/karma.conf.js",
     "update-webdriver": "node_modules/protractor/bin/webdriver-manager update",
     "link-chromedriver": "ln -s /home/citypantry/project/frontend/node_modules/chromedriver/bin/chromedriver node_modules/protractor/selenium/chromedriver.exe",
     "install-pre-commit": "ln -s ../../bin/pre-commit .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit"
@@ -33,6 +34,10 @@
     "protractor": "~1.0.0",
     "reattempt-promise-function": "0.0.6",
     "request-promise": "^0.4.0",
-    "selenium-webdriver": "~2.x"
+    "selenium-webdriver": "~2.x",
+    "karma": "~0.12.31",
+    "jasmine-core": "~2.2.0",
+    "karma-jasmine": "~0.3.5",
+    "karma-phantomjs-launcher": "~0.1.4"
   }
 }
