--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "citypantry-3-frontend",
   "title": "CityPantry",
   "scripts": {
-    "postinstall": "npm run webdriverupdate && grunt copy:dist sass csso js",
+    "postinstall": "npm run update-webdriver && grunt dist",
     "test": "npm run postinstall && vagrant up && ./bin/wait-for-dev && && ./node_modules/protractor/bin/protractor etc/protractor.js; vagrant halt;",
     "test-no-halt": "npm run postinstall && vagrant up && ./bin/wait-for-dev && && ./node_modules/protractor/bin/protractor etc/protractor.js;",
     "test-local": "LOCAL_SELENIUM=1 ./node_modules/protractor/bin/protractor etc/protractor.js;",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "chromedriver": "~2.9.1-1",
+    "citypantry-js-lib": "^1.0.7",
     "grunt": "~0.4.1",
     "grunt-6to5": "~3.0.0",
     "grunt-contrib-concat": "~0.5.0",
@@ -28,16 +29,16 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-csso": "git://github.com/amyboyd/grunt-csso.git",
     "grunt-sass": "~0.16.1",
+    "jasmine-core": "~2.2.0",
     "jasmine-reporters": "~0.4.0",
     "jshint": "~2.6.0",
+    "karma": "~0.12.31",
+    "karma-jasmine": "~0.3.5",
+    "karma-phantomjs-launcher": "~0.1.4",
     "matchdep": "~0.1.2",
     "protractor": "~1.0.0",
     "reattempt-promise-function": "0.0.6",
     "request-promise": "^0.4.0",
-    "selenium-webdriver": "~2.x",
-    "karma": "~0.12.31",
-    "jasmine-core": "~2.2.0",
-    "karma-jasmine": "~0.3.5",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "selenium-webdriver": "~2.x"
   }
 }
