--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,3 +38,4 @@ twig:
         twitterHandle: %templates.twitter_handle%
         googleMapsJavascriptApiV3Key: %templates.google_maps_javascript_api_v3_key%
         hubspotBase: %templates.hubspot_base%
+        cacheBusterValue: %cache_buster_value%
