--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "matchdep": "~0.1.2",
     "protractor": "~1.0.0",
+    "randy": "^1.5.1",
     "reattempt-promise-function": "0.0.6",
     "request-promise": "^0.4.0",
     "selenium-webdriver": "~2.x"
