--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jasmine-bail-fast": "0.0.1"
   },
   "devDependencies": {
+    "angulartics": "~0.17.2",
     "chromedriver": "~2.9.1-1",
     "citypantry-js-lib": "^1.0.41",
     "grunt": "~0.4.1",
