--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -9,6 +9,8 @@ parameters:
     templates.blog_url: https://citypantry.com/blog
     templates.twitter_handle: citypantry
     templates.hubspot_base: https://citypantry.com
+    templates.frontend_base: https://order.citypantry.com
+    templates.api_base: https://api.citypantry.com
 
     # A key that works for any domain is: AIzaSyDcbvisbl9Wx6CA4qKe7Ld-mVWVKOiRZ_U
     # A key that works for prod is: AIzaSyD1LSq6a2KDw3-pVN20CdqUpNEZ37wADDg
