--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
     "jasmine-bail-fast": "0.0.1"
   },
   "devDependencies": {
-    "angulartics": "~0.17.2",
-    "chromedriver": "~2.9.1-1",
-    "citypantry-js-lib": "^1.0.43",
-    "grunt": "~0.4.1",
-    "grunt-6to5": "~3.0.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-imagemin": "~0.7.1",
+    "angulartics": "~0.18.0",
+    "chromedriver": "~2.15.1",
+    "citypantry-js-lib": "^1.0.44",
+    "grunt": "~0.4.5",
+    "grunt-babel": "~5.0.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-imagemin": "~0.9.4",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-csso": "git://github.com/amyboyd/grunt-csso.git",
-    "grunt-sass": "~0.16.1",
-    "jasmine-core": "~2.2.0",
-    "jasmine-reporters": "~0.4.0",
-    "jshint": "~2.6.0",
-    "karma": "~0.12.31",
+    "grunt-sass": "~1.0.0",
+    "jasmine-core": "~2.3.4",
+    "jasmine-reporters": "~2.0.6",
+    "jshint": "~2.8.0",
+    "karma": "~0.12.35",
     "karma-jasmine": "~0.3.5",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "matchdep": "~0.1.2",
-    "protractor": "~1.0.0",
+    "karma-phantomjs-launcher": "~0.2.0",
+    "matchdep": "~0.3.0",
+    "protractor": "~2.1.0",
     "randy": "^1.5.1",
     "reattempt-promise-function": "0.0.6",
-    "request-promise": "^0.4.0",
+    "request-promise": "^0.4.2",
     "selenium-webdriver": "~2.x"
   }
 }
