--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -16,5 +16,7 @@ parameters:
     # A key that works for prod is: AIzaSyD1LSq6a2KDw3-pVN20CdqUpNEZ37wADDg
     templates.google_maps_javascript_api_v3_key: AIzaSyD1LSq6a2KDw3-pVN20CdqUpNEZ37wADDg
 
+    templates.segment_write_key: ~
+
     citypantry_api_endpoint: https://api.citypantry.com
     cache_buster_value: ~
