--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "grunt-babel": "~5.0.0",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-imagemin": "~0.9.4",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-csso": "~0.7.1",
+    "grunt-ng-annotate": "1.0.x",
     "grunt-sass": "~1.0.0",
     "jasmine-core": "~2.3.4",
     "jasmine-reporters": "~2.0.6",
